--- a/src/app/kpi_graphs/chart.module.css
+++ b/src/app/kpi_graphs/chart.module.css
@@ -4,6 +4,10 @@
     margin: 20px auto;
 }
 
+.loading {
+    text-align: center;
+}
+
 @media screen and (min-width: 700px){
     .ChartContainer {
         margin: auto;
